--- a/views/otherProducts.hbs
+++ b/views/otherProducts.hbs
@@ -5,7 +5,7 @@
             <a href="/" class="breadcrumb">Home</a>
             <a href="" class="breadcrumb">Store</a>
             <a href="/products/others" class="breadcrumb active">Others</a>
-            <h4>Others</h4>
+            <h4>Other Products</h4>
         </div>
     </div>
     <section>
@@ -36,6 +36,7 @@
             <h3 class="no-product">THERE ARE NO PRODUCTS AT THIS TIME</h3>
         {{/if}}
     </section>
+    {{> signupForm}}
 </main>
 {{> fab}}
 {{> footer}}
