--- a/views/partials/loginModal.hbs
+++ b/views/partials/loginModal.hbs
@@ -4,7 +4,7 @@
         </div>
         <div class="modal-content">
             <h4>Login <i id="modal-close" class="mdi mdi-close modal-close right"></i></h4>
-            <form id="loginForm" name="loginForm" novalidate method="POST">
+            <form id="loginForm" name="loginForm" novalidate method="POST" enctype='application/json'>
                 <div class="row login-row">
                     <div class="col s12 input-field">
                         <i class="mdi mdi-email-outline prefix"></i>
