--- a/views/phonesAndElectronics.hbs
+++ b/views/phonesAndElectronics.hbs
@@ -36,6 +36,7 @@
             <h3 class="no-product">THERE ARE NO ELECTRONICS AT THIS TIME</h3>
         {{/if}}
     </section>
+    {{> signupForm}}
 </main>
 {{> fab}}
 {{> footer}}
