--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,26 +5,12 @@
     font-weight: lighter;
 }
 
-.card-container {
-    padding: 0 25px;
-}
-
-.card .card-content .card-title, .card .card-reveal .card-title {
-    color: #a7b018 !important;
-    font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 200;
-}
-
-.card .card-reveal .card-title .close-card:hover {
-    color: #fa9609;
-}
-
-.card .card-content .card-title .option-icon, .card .card-reveal .card-title .close-card {
-    color: #555;
-}
-
-.card .card-reveal p {
-    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+#no-items {
+    background: #fff;
+    color: #666;
+    font-family: 'Rajdhani', Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 2rem;
+    text-align: center;
 }
 
 .price {
