--- a/public/css/services.css
+++ b/public/css/services.css
@@ -37,9 +37,46 @@ a.breadcrumb:hover {
     color: #333;
 }
 
+section {
+    margin-top: 2.5rem;
+}
+
+.service-card {
+    background-color: #fff;
+    border-radius: 2px;
+    min-height: 400px;
+    max-width: 100%;
+    margin-bottom: 25px;
+    padding: 0 2rem;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 
+        0 3px 1px -2px rgba(0, 0, 0, 0.12), 
+        0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 
+        0 3px 1px -2px rgba(0, 0, 0, 0.12), 
+        0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    -ms-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 
+        0 3px 1px -2px rgba(0, 0, 0, 0.12), 
+        0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    -o-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 
+        0 3px 1px -2px rgba(0, 0, 0, 0.12), 
+        0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 
+        0 3px 1px -2px rgba(0, 0, 0, 0.12), 
+        0 1px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
 .service {
     font-family: 'Montserrat', Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
+}
+
+.card-icon {
+    text-align: center;
+}
+
+.service-icon {
+    color: #aaa;
+    font-size: 5rem;
 }
 
 .service-info {
