--- a/views/cosmetics.hbs
+++ b/views/cosmetics.hbs
@@ -33,9 +33,10 @@
                 </div>
             </div>
         {{else}}
-            <h3 class="no-product">THERE ARE NO PRODUCTS HERE AT THIS TIME</h3>
+            <h3 class="no-product">THERE ARE NO COSMETICS HERE AT THIS TIME</h3>
         {{/if}}
     </section>
+    {{> signupForm}}
 </main>
 {{> fab}}
 {{> footer}}
