--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -92,6 +92,7 @@
             </div>
         </div>
     </div>
+    {{> signupForm}}
     {{> addItemModal}}
     {{> addServiceModal}}
     {{> editDataModal}}
