--- a/views/fashion.hbs
+++ b/views/fashion.hbs
@@ -36,6 +36,7 @@
             <h3 class="no-product">THERE ARE NO FASHION items AT THIS TIME</h3>
         {{/if}}
     </section>
+    {{> signupForm}}
 </main>
 {{> fab}}
 {{> footer}}
