--- a/views/makeUp.hbs
+++ b/views/makeUp.hbs
@@ -4,8 +4,8 @@
         <div class="col s12">
             <a href="/" class="breadcrumb">Home</a>
             <a href="" class="breadcrumb">Store</a>
-            <a href="/services/ushering" class="breadcrumb active">Ushering</a>
-            <h4>Ushering</h4>
+            <a href="/services/makeUp" class="breadcrumb active">Make Up</a>
+            <h4>Make Up</h4>
         </div>
     </div>
     <section>
@@ -16,7 +16,7 @@
                         <div class="col s12 m6 l3">
                             <div class="service-card hoverable">
                                 <div class="card-icon">
-                                    <span class="mdi mdi-human-male-male service-icon"></span>
+                                    <span class="mdi mdi-human-female service-icon"></span>
                                 </div>
                                 <div class="content service">
                                     <p>Seller: <span class="service-info">{{this.userName}}</span></p>
@@ -29,7 +29,7 @@
                 </div>
             </div>
         {{else}}
-            <h3 class="no-service">THERE ARE NO USHERING SERVICES AT THIS TIME</h3>
+            <h3 class="no-service">THIS SERVICE IS CURRENTLY UNAVALABLE</h3>
         {{/if}}
     </section>
     {{> signupForm}}
