--- a/views/partials/addItemModal.hbs
+++ b/views/partials/addItemModal.hbs
@@ -12,7 +12,7 @@
                     <span class="helper-text" data-error="Please provide item name"></span>
                 </div>
                 <div class="col l6 s12 input-field">
-                    <input type="text" name="itemPrice" id="itemPrice" class="validate">
+                    <input type="number" name="itemPrice" id="itemPrice" class="validate">
                     <label for="itemPrice">Item Price</label>
                     <span class="helper-text" data-error="Please provide item price."></span>
                 </div>
@@ -34,9 +34,9 @@
             </div>
             <div class="row login-row">
                 <div class="col s12 input-field">
-                    <textarea name="itemDescription" id="itemDescription" class="materialize-textarea" class="validate"></textarea>
+                    <textarea name="itemDescription" id="itemDescription" class="materialize-textarea" class="validate" maxlength="100"></textarea>
                     <label for="itemDescription">Short description here...</label>
-                    <span class="helper-text" data-error="Please enter a description for your item"></span>
+                    <span class="helper-text" data-error="Please enter a description for your item">Characters <span id="itemDescriptionCharacters">0</span>/100</span>
                 </div>
             </div>
             <div class="row login-row">
