--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -73,14 +73,14 @@
                 <ul class="hide-on-med-and-down right">
                     {{#if user}}
                         <li class="active"><a href="/"><i class="mdi mdi-home left"></i>Home</a></li>
-                        <li><a href="#!" class="dropdown-trigger" data-target="store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
-                        <li><a href="#!" class="dropdown-trigger" data-target="services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
+                        <li class="store"><a href="#!" class="dropdown-trigger" data-target="store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
+                        <li class="services"><a href="#!" class="dropdown-trigger" data-target="services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
                         <li class="account"><a href="/users/{{user._id}}/account"><i class="mdi mdi-account left"></i>My Account</a></li>
                         <li><a href="/users/logout/{{user._id}}"><i class="mdi mdi-logout left"></i>Log out</a></li>
                     {{else}}
                         <li class="active"><a href="/"><i class="mdi mdi-home left"></i>Home</a></li>
-                        <li><a href="#!" class="dropdown-trigger" data-target="store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
-                        <li><a href="#!" class="dropdown-trigger" data-target="services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
+                        <li class="store"><a href="#!" class="dropdown-trigger" data-target="store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
+                        <li class="services"><a href="#!" class="dropdown-trigger" data-target="services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
                         <li class="sell"><a href="/sell"><i class="mdi mdi-tag left"></i>Sell on Z-Mart</a></li>
                         <li><a href="#loginModal" class="modal-trigger"><i class="mdi mdi-login left"></i>Login/Signup</a></li>
                     {{/if}}
@@ -89,15 +89,15 @@
         </nav>
         <ul id="mobile-menu" class="sidenav">
             {{#if user}}
-                <li><a href="/"><i class="mdi mdi-home left"></i>Home</a></li>
-                <li><a href="#!" class="dropdown-trigger" data-target="mobile-store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
-                <li><a href="#!" class="dropdown-trigger" data-target="mobile-services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
+                <li class="active"><a href="/"><i class="mdi mdi-home left"></i>Home</a></li>
+                <li class="store"><a href="#!" class="dropdown-trigger" data-target="mobile-store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
+                <li class="services"><a href="#!" class="dropdown-trigger" data-target="mobile-services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
                 <li class="account"><a href="/users/{{user._id}}/account"><i class="mdi mdi-account left"></i>My Account</a></li>
                 <li><a href="/users/logout/{{user._id}}"><i class="mdi mdi-logout left"></i>Log out</a></li>
             {{else}}
-                <li><a href="/"><i class="mdi mdi-home left"></i>Home</a></li>
-                <li><a href="#!" class="dropdown-trigger" data-target="mobile-store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
-                <li><a href="#!" class="dropdown-trigger" data-target="mobile-services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
+                <li class="active"><a href="/"><i class="mdi mdi-home left"></i>Home</a></li>
+                <li class="store"><a href="#!" class="dropdown-trigger" data-target="mobile-store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
+                <li class="services"><a href="#!" class="dropdown-trigger" data-target="mobile-services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
                 <li class="sell"><a href="/sell"><i class="mdi mdi-tag left"></i>Sell on Z-Mart</a></li>
                 <li><a href="#loginModal" class="modal-trigger"><i class="mdi mdi-login left"></i>Login/Signup</a></li>
             {{/if}}            
