--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Zubismart is an online platform for peopple to buy and sell goods and services. Our goal is to make life easier by bringing your required needs to your doorstep.">
     <link href="https://fonts.googleapis.com/css?family=Dosis|Montserrat|Rajdhani|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="/css/materialicons.css">
