--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,7 +8,8 @@
 #no-items {
     background: #fff;
     color: #666;
-    font-family: 'Roboto', Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Rajdhani', Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: lighter;
     padding: 2rem;
     text-align: center;
 }
