Added meta description

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -76,7 +76,9 @@
         </div>
         <div class="scrollspy" id="about">
             <h5 class="sub-header">About Zubis Mart</h5>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime necessitatibus laboriosam quasi debitis doloribus repudiandae mollitia soluta fuga qui, eius delectus, quaerat cupiditate! Veritatis illo accusantium corporis recusandae id ipsam voluptas nobis possimus eius quia. A eos architecto perferendis consequatur laudantium quisquam, quos earum voluptate rerum tenetur accusantium rem assumenda!</p>
+            <p>
+                Zubis mart is an online shopping avenue for every product and services you can think of and ever need. It covers products ranging from clothing and electronics, to make up, programming services and lots more. The best thing about Zubis mart is that it not only gives you the opportunity to buy, it also gives you the opportunity to sell and make your own money; it’s a market after all.
+            </p>
         </div>
         <div class="parallax-container valign-wrapper">
             <div class="section no-pad-bot">
