--- a/views/sell.hbs
+++ b/views/sell.hbs
@@ -24,12 +24,16 @@
                 <div class="col s12 l4">
                     <i class="mdi mdi-currency-ngn sell-icons"></i>
                     <h5 class="sell-sub-header">Earn More Money</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rem soluta molestiae porro dignissimos unde aliquid cupiditate alias labore numquam!</p>
+                    <p>
+                        With the ever increasing customer range which we provide, you can be rest assured of more sales and therefore, huge profits.
+                    </p>
                 </div>
                 <div class="col s12 l4">
                     <i class="mdi mdi-headset sell-icons"></i>
                     <h5 class="sell-sub-header">Communication is Easy</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rem soluta molestiae porro dignissimos unde aliquid cupiditate alias labore numquam!</p>
+                    <p>
+                        Zubis Mart bridges the problem of distance between buyers and sellers. We make it easier for customers to contact buyers with very little effort.
+                    </p>
                 </div>
                 <div class="col s12 l4">
                     <i class="mdi mdi-calculator sell-icons"></i>
@@ -41,17 +45,21 @@
                 <div class="col s12 l4">
                     <i class="mdi mdi-progress-clock sell-icons"></i>
                     <h5 class="sell-sub-header">You Have Our 24/7 Support</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rem soluta molestiae porro dignissimos unde aliquid cupiditate alias labore numquam!</p>
+                    <p>
+                        We provide round the clock user support. So be rest assured we've got you covered whenever you need our assistance or support.
+                    </p>
                 </div>
                 <div class="col s12 l4">
                     <i class="mdi mdi-sync sell-icons"></i>
                     <h5 class="sell-sub-header">You're in Control</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rem soluta molestiae porro dignissimos unde aliquid cupiditate alias labore numquam!</p>
+                    <p>
+                        Choose what you sell, how you sell, and who you sell to. Our users have absolute and easy control over products and services posted on Zubismart. 
+                    </p>
                 </div>
                 <div class="col s12 l4">
                     <i class="mdi mdi-security sell-icons"></i>
                     <h5 class="sell-sub-header">We Make Sure It's Safe</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rem soluta molestiae porro dignissimos unde aliquid cupiditate alias labore numquam!</p>
+                    <p>With our state of the art web technologies, you can be rest assured personal information with us is always kept safe from attackers.</p>
                 </div>
             </div>
         </div>
