--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,7 +2,7 @@
     <div id="navbar" class="bavbar-fixed">
         <nav>
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo"><img id="logo" src="/img/logo.jpg" alt="Zubis Mart Logo"></a>
+                <a href="/" class="brand-logo"><img id="logo" src="/img/logo.jpg" alt="Zubis Mart Logo"></a>
                 <a href="#" class="sidenav-trigger" data-target="mobile-menu"><i id="menu-icon" class="mdi mdi-menu"></i></a>
                 <ul id="store-dropdown" class="dropdown-content">
                     <li><a href="/products/phonesAndElectronics">Phones &amp; Electronics</a></li>
