--- a/public/css/adminDashboard.css
+++ b/public/css/adminDashboard.css
@@ -20,10 +20,33 @@ body {
 
 .header {
     text-align: center;
+    font-family: 'Rajdhani';
 }
 
-input {
+#heading {
+    color:#ffa500;
+}
+
+#findUser {
+    background-color: #f8f8f8; 
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-left: 10px;
     width: 50% !important;
+}
+
+#findUser:focus {
+    background-color: #f5f5f5; 
+}
+
+#numberOfUsers {
+    background-color: #34b7f1;
+    /* background-color: #e6e6e6; */
+    /* color: #555; */
+    color: #fff;
+    padding: 5px;
+    position: relative;
+    margin: 0 auto;
+    width: 25%;
 }
 
 .error-message {
@@ -33,14 +56,15 @@ input {
 }
 
 .success-message {
-    border-radius: 5px;
+    border-radius: 10px;
     color: #388e3c;
     background-color: #a5d6a7;
 }
 
-.message p span {
-    float: right;
-    cursor: pointer;
+table {
+    box-shadow: 0px 0px 5px #e6e6e6;
+    margin-top: 40px;
+    font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 tbody {
@@ -60,7 +84,7 @@ tbody {
 }
 
 .editUser {
-    color: #03a9f4;
+    color: #34b7f1;
 }
 
 .removeUser {
