--- a/views/adminLogin.hbs
+++ b/views/adminLogin.hbs
@@ -1,1 +1,36 @@
-<h2>Adin Login</h2>
+{{> header}}
+<main>
+    <div id="formDiv">
+        <h5 class="admin-header">Admin Login</h5>
+        {{#if wrongPassword}}<h6 id="incorrect-password">{{wrongPassword}}<span class="mdi mdi-close close-password-error-message"></span></h6>{{/if}}
+        <div id="adminLoginLoader" class="progress">
+            <div class="indeterminate"></div>
+        </div>
+        <form id="adminLoginForm" action="/admin/login" method="POST">
+            <div class="row">
+                <div class="col s12 center">
+                    <span class="mdi mdi-lock-outline mdi-48px admin-icon"></span>
+                </div>
+            </div>    
+            <div class="row">
+                <div class="col s12 input-field">
+                    <input type="text" id="adminUsername" name="adminUsername" autofocus class="validate" value="{{adminUsername}}">
+                    <label for="adminUsername">Admin Username</label>
+                    <span class="helper-text" data-error="Invalid Username!"></span>
+                </div>
+            </div>    
+            <div class="row">
+                <div class="col s12 input-field">
+                    <input type="password" id="adminPassword" name="adminPassword" class="validate" value="{{adminPassword}}">
+                    <label for="adminPassword">Password</label>
+                    <span class="helper-text" data-error="Invalid Password!"></span>
+                </div>
+            </div>    
+            <div class="row">
+                <div class="col s12 input-field">
+                    <button type="submit" id="adminLoginButton">Login</button>
+                </div>
+            </div>    
+        </form>
+    </div>
+</main>
