Added User Disabling Functionality

--- a/views/adminDashboard.hbs
+++ b/views/adminDashboard.hbs
@@ -81,7 +81,7 @@
                                 <div class="switch">
                                     <label>
                                         Off
-                                        <input type="checkbox" class="toggleSwitch" data-id="{{this._id}}" {{isUserEnabled this}}>
+                                        <input type="checkbox" class="toggleSwitch" data-id="{{this._id}}" {{hasPaid this}}>
                                         <span class="lever"></span>
                                         On
                                     </label>
