--- a/views/fashion.hbs
+++ b/views/fashion.hbs
@@ -33,7 +33,7 @@
                 </div>
             </div>
         {{else}}
-            <h3 class="no-product">THERE ARE NO FASHION items AT THIS TIME</h3>
+            <h3 class="no-product">THERE ARE NO FASHION ITEMS AT THIS TIME</h3>
         {{/if}}
     </section>
 </main>
