--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,8 +1,74 @@
+body {
+    overflow-x: hidden;
+}
+
 .sub-header {
     text-align: center;
     color: #fa9609;
     font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: lighter;
+}
+
+#advert {
+    background-color: #fff;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    box-shadow: 0px 0px 5px #e1e1e1;
+}
+
+.advert-header {
+    text-align: center;
+}
+
+.advert-header a:hover {
+    text-decoration: underline;
+}
+
+.advert-header h5 {
+    color: #ffa500;
+}
+
+.advert-item {
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+    height: 400px;
+    -webkit-transition: .5s linear all;
+    -moz-transition: .5s linear all;
+    -ms-transition: .5s linear all;
+    -o-transition: .5s linear all;
+     transition: .5s linear all;
+}
+
+.advert-item:hover {
+    -webkit-transform: scale(0.9);
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -o-transform: scale(0.9);
+     transform: scale(0.9);
+}
+
+#advert-item-1 {
+    background-image: url(/img/phone.png);
+}
+
+#advert-item-2 {
+    background-image: url(/img/books1.jpg);
+    -webkit-transition: .5s linear all;
+    -moz-transition: .5s linear all;
+    -ms-transition: .5s linear all;
+    -o-transition: .5s linear all;
+     transition: .5s linear all;
+}
+
+#advert-item-3 {
+    background-image: url(/img/cloth.jpg);
+    -webkit-transition: .5s linear all;
+    -moz-transition: .5s linear all;
+    -ms-transition: .5s linear all;
+    -o-transition: .5s linear all;
+     transition: .5s linear all;
 }
 
 #no-items {
@@ -25,6 +91,31 @@
 
 .parallax-container {
     margin: 30px 0;
+}
+
+#parallax1 {
+    background-image: url(/img/slide5.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100vw;
+    height: 500px;   
+}
+
+.parallax-overlay {
+    background-color: rgba(0, 0, 0, 0.4);
+    color: #fff;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.parallax-overlay .parallax-text {
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    position: relative;
+    top: 40%;
 }
 
 #about {
